# scan3d

./: .gitignore  CMakeLists.txt  README.md  captureV.pro  couleur.cpp  leopard-gmp.cpp  leopard-gmp.hpp  leopard.cpp  leopard.hpp  main.cpp  paths.hpp  simple.cpp  triangulation.cpp  triangulation.hpp  unsync.cpp
calibration/: camera_calibration.cpp
math/: statcam.nb
reference/: pluginLeopard.cpp  pluginLeopard.hpp
triangulation/nuagePoints/: main.cpp  nuagePoints.pro
